Corrigiendo archibo .gitignore

--- a/index.html
+++ b/index.html
@@ -33,16 +33,28 @@
 				<form>
 					<input type="search" name="txtBuscar" class="textBox" id="searchBox">
 					<div id="containerProvincia" class="containerText">
-						<input type="text" name="provincia" class="textBox">
-						<input type="button" name="desplegarProvincia" value="v">
+						<select class="textBox">
+							<option>opcion 1</option>
+							<option>opcion 2</option>
+							<option>opcion 3</option>
+							<option>opcion 4</option>
+						</select>
 					</div>
 					<div id="containerLocalidad" class="containerText">
-						<input type="text" name="localidad" class="textBox">
-						<input type="button" name="desplegarLocalidad" value="v">
+						<select class="textBox">
+							<option>opcion 1</option>
+							<option>opcion 2</option>
+							<option>opcion 3</option>
+							<option>opcion 4</option>
+						</select>
 					</div>
 					<div id="containerMes" class="containerText">
-						<input type="text" name="mes" class="textBox">
-						<input type="button" name="desplegarMes" value="v">
+						<select class="textBox">
+							<option>opcion 1</option>
+							<option>opcion 2</option>
+							<option>opcion 3</option>
+							<option>opcion 4</option>
+						</select>
 					</div>
 					<input type="button" name="buscar" value="Buscar">
 				</form>
